# mesh_sampling

./: .clang-format-common.sh  .envrc  .gitignore  .mergify.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix
.github/workflows/: build.yml  package.yml
CMakeConfig/: CMakeLists.txt  mesh_samplingConfig.cmake.in
CMakeModules/: FindCLI11.cmake  Findmesh_sampling_3rd_party_PCL.cmake
debian/: changelog  control  libmesh-sampling-dev.install  mesh-sampling.lintian-overrides  rules
ext/effolkronium/: random.hpp
include/mesh_sampling/: CLI11.hpp  assimp_scene.h  mesh_sampling.h  mesh_sampling.hpp  mesh_sampling_impl.h  qhull_io.h
src/: CMakeLists.txt  mesh_sampling.cpp
tests/: CMakeLists.txt  testWeightedRandomSampling.cpp
tests/test_mesh_sampling/: CMakeLists.txt
tests/test_mesh_sampling/src/: main.cpp
utils/: CMakeLists.txt  mesh_sampling.cpp
